clusters/labinfra/apps/rag.xuperson.org/rag-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ragflow
  namespace: rag
  labels:
    app.kubernetes.io/name: rag
    app.kubernetes.io/component: application
spec:
  selector:
    app.kubernetes.io/name: rag
    app.kubernetes.io/component: application
  ports:
  - name: http
    port: 80
    targetPort: 9380
    protocol: TCP
  type: ClusterIP
